// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queen component renders Queen 1`] = `
<DocumentFragment>
  <div>
    <p>
      Bianca Del Rio
    </p>
    <img
      alt="Bianca Del Rio"
      src="BDR.com"
      style="height: 200px;"
    />
  </div>
</DocumentFragment>
`;

exports[`QueenData component renders Queen data by id 1`] = `
<DocumentFragment>
  <div
    data-testid="details"
  >
    <p>
      Bianca Del Rio
    </p>
    <img
      alt="Bianca Del Rio"
      src="BDR.com"
      style="height: 200px;"
    />
    <p />
    <p>
      Not today Satan.
    </p>
  </div>
</DocumentFragment>
`;
